# word-pdf-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  单词文档配音-完整方案.md  单词文档配音方案文档索引.md  单词文档配音项目交接文档-2026-07-17.md  单词文档配音项目交接文档-2026-07-18.md  单词文档配音项目交接文档-2026-07-19.md  单词文档配音项目交接文档-2026-07-22.md  更新日志.md
assets/: README.md
assets/ui/: README.md
docs/: anki-setup-and-usage.md  goals-and-constraints.md  implementation-plan.md  index.md  product-brief.md  repository-structure.md  versioning-and-data.md
docs/experience-Library/: 2026-07-17-cet4-pdf-extraction.md  2026-07-17-espeak-unicode-path.md  2026-07-17-qt-worker-lifetime.md  2026-07-17-sqlite-windows-lock.md  2026-07-18-anki-html-escaping.md  2026-07-18-pyinstaller-package-data.md  2026-07-18-tts-profile-cache.md  2026-07-19-powershell-utf8-build-script.md  2026-07-19-sqlite-backup-and-recovery.md  2026-07-22-complex-bilingual-pdf.md  2026-07-22-continuous-playback-audio.md  README.md
packaging/: word_voice.spec
scenes/: README.md  v0.1-desktop.md  v0.2-generated-audio.md  v0.2.1-tts-sort.md  v0.3-anime-healing-ui.md  v0.4-continuous-learning.md  v0.5-focus-learning.md  v0.6-complex-import.md
scripts/: README.md  build.ps1  extract_pdf.py  preview_complex_import.py  run_app.py  setup.ps1  setup_models.py  verify_portable.py  verify_version.py
spec/: current.md  v0.1.1.md
src/word_voice/: __init__.py  anki_export.py  app.py  cli.py  extractor.py  (+6 more)
tests/: test_anki_export.py  test_app_worker.py  test_complex_pdf.py  test_core.py  test_packaging.py  test_playback.py  test_real_pdf.py
