[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "word-pdf-voice"
version = "0.3.0"
description = "Convert structured vocabulary PDFs into local word audio and Anki decks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pdfplumber>=0.11,<1",
  "genanki>=0.13,<1",
  "kokoro-onnx>=0.5,<1",
  "PySide6-Essentials>=6.7,<7",
  "soundfile>=0.13,<1",
]

[project.scripts]
word-voice = "word_voice.cli:main"
word-voice-app = "word_voice.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
